--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,39 +18,21 @@
                   <div class="wrap">
                       <div class="main">
                           <strong class="subject">
-                              <a href="./qna/show.html">{{title}}</a>
+                              <a href="/questions/{{id}}">{{title}}</a>
                           </strong>
                           <div class="auth-info">
                               <i class="icon-add-comment"></i>
-                              <span class="time">2016-01-15 18:47</span>
-                              <a href="./user/profile.html" class="author">{{writer}}</a>
+                              <span class="time">{{formattedCreateTime}}</span>
+                              <a href="./user/profile.html" class="author">{{writer.userId}}</a>
                           </div>
                           <div class="reply" title="댓글">
                               <i class="icon-reply"></i>
-                              <span class="point">8</span>
+                              <span class="point">{{countedAnswers}}</span>
                           </div>
                       </div>
                   </div>
               </li>
               {{/questions}}
-              <li>
-                  <div class="wrap">
-                      <div class="main">
-                          <strong class="subject">
-                              <a href="./qna/show.html">runtime 에 reflect 발동 주체 객체가 뭔지 알 방법이 있을까요?</a>
-                          </strong>
-                          <div class="auth-info">
-                              <i class="icon-add-comment"></i>
-                              <span class="time">2016-01-05 18:47</span>
-                              <a href="./user/profile.html" class="author">김문수</a>
-                          </div>
-                          <div class="reply" title="댓글">
-                              <i class="icon-reply"></i>
-                              <span class="point">12</span>
-                          </div>
-                      </div>
-                  </div>
-              </li>
           </ul>
           <div class="row">
               <div class="col-md-3"></div>
