--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -10,6 +10,9 @@
 <div class="container" id="main">
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
+          {{#error}}
+          <div class="alert alert-danger" role="alert">{{this}}</div>
+          {{/error}}
           <form name="question" method="post" action="/users/login">
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
@@ -27,5 +30,6 @@
 </div>
 
 {{> /include/footer}}
+
 	</body>
 </html>
