--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -72,27 +72,24 @@
                               <div class="article-util">
                                   <ul class="article-util-list">
                                       <li>
-                                          <a class="link-modify-article" href="/questions/413/answers/1405/form">수정</a>
+                                          <a class="link-modify-article" href="/api/qna/updateAnswer/{{id}}">수정</a>
                                       </li>
                                       <li>
-                                          <form class="delete-answer-form" action="/questions/413/answers/1405" method="POST">
-                                              <input type="hidden" name="_method" value="DELETE">
-                                              <button type="submit" class="delete-answer-button">삭제</button>
-                                          </form>
+                                          <a class="link-delete-answer" href="/api/questions/{{question.id}}/answers/{{id}}">삭제</a>
                                       </li>
                                   </ul>
                               </div>
                           </article>
                           {{/ answers}}
-                         
-                          <form class="submit-write" action="/questions/{{id}}/answers" method="post">
-                              <div class="form-group" style="padding:14px;">
-                                  <textarea class="form-control" name="contents" placeholder="답변하기"></textarea>
-                              </div>
-                              <input type="submit" class="btn btn-success pull-right" type="button" value="답변하기"></button>
-                              <div class="clearfix" />
-                          </form>
                       </div>
+                      
+                      <form class="answer-write" action="/api/questions/{{id}}/answers" method="post">
+                         <div class="form-group" style="padding:14px;">
+                             <textarea class="form-control" name="contents" placeholder="답변하기"></textarea>
+                         </div>
+                         <input type="submit" class="btn btn-success pull-right" type="button" value="답변하기"></button>
+                         <div class="clearfix" />
+                     </form>
                   </div>
               </div>
           </div>
@@ -121,10 +118,7 @@
 				<a class="link-modify-article" href="/api/qna/updateAnswer/{3}">수정</a>
 			</li>
 			<li>
-				<form class="delete-answer-form" action="/api/questions/{3}/answers/{4}" method="POST">
-					<input type="hidden" name="_method" value="DELETE">
-                     <button type="submit" class="delete-answer-button">삭제</button>
-				</form>
+				<a class="link-delete-answer" href="/api/questions/{3}/answers/{4}">삭제</a>
 			</li>
 		</ul>
 		</div>
